--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,16 @@
 
 server.port=8077
+
+#????????? ??
+spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql://localhost:5436/user?currentSchema=api}
+spring.datasource.username=${DATASOURCE_USER_NAME:user}
+spring.datasource.password=${DATASOURCE_USER_PASSWORD:user}
+
+#????????? Redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.database=0
+spring.redis.timeout=0
+
+#????? ????? ?????? ? ??? Redis
+spring.redis.record-delete-time
